# bevy_ecs_benchmark

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  plugin.rs  state.rs
src/benchmark/: mod.rs  results.rs  runner.rs
src/benchmark/workloads/: fragmentation.rs  iteration.rs  mod.rs  mutation.rs  structural.rs
src/components/: mod.rs  test_components.rs
src/metrics/: frame_metrics.rs  mod.rs
src/ui/: dashboard.rs  graph.rs  mod.rs  styles.rs
